# out-of-context

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  README.md  TODO.md  prompt.txt
src/: cli.rs  generator.rs  llm.rs  main.rs  model.rs  output.rs
